--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./dist/css/index.css" />
+  
   <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
   
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -15,7 +15,8 @@
     rel="stylesheet" />
 
   <title>Test Client</title>
-  <script type="module" crossorigin src="/assets/index.2b4ffcc4.js"></script>
+  <script type="module" crossorigin src="/assets/index.d251f89c.js"></script>
+  <link rel="stylesheet" href="/assets/index.c7cc93b4.css">
 </head>
 
 <body class="min-vh-100 d-flex flex-column">
